@@ -16,7 +16,7 @@
  */
 enum layout_order_type_enum {
     PENCIL_LAYOUT_ORDER_TYPE_NONE = 0,  /*!< there is no order for this type of object in this type of diagram */
-    PENCIL_LAYOUT_ORDER_TYPE_OUT_OF_RANGE = 1,  /*!< there is no order, the position is out of range */
+    PENCIL_LAYOUT_ORDER_TYPE_OUT_OF_RANGE = 1,  /*!< there is an order but the position is out of range */
     PENCIL_LAYOUT_ORDER_TYPE_X_Y = 2,  /*!< the order is an x/y order pair */
     PENCIL_LAYOUT_ORDER_TYPE_LIST = 3,  /*!< the order is a list order */
 };
@@ -42,7 +42,7 @@ typedef struct layout_order_struct layout_order_t;
  *  \param first first value of the pair
  *  \param second second value of the pair
  */
-static inline void layout_order_init ( layout_order_t *this_, layout_order_type_t order_type, int32_t first, int32_t second );
+static inline void layout_order_private_init ( layout_order_t *this_, layout_order_type_t order_type, int32_t first, int32_t second );
 
 /*!
  *  \brief re-initializes the layout_order_t struct
@@ -52,7 +52,41 @@ static inline void layout_order_init ( layout_order_t *this_, layout_order_type_
  *  \param first first value of the pair
  *  \param second second value of the pair
  */
-static inline void layout_order_reinit ( layout_order_t *this_, layout_order_type_t order_type, int32_t first, int32_t second );
+static inline void layout_order_private_reinit ( layout_order_t *this_, layout_order_type_t order_type, int32_t first, int32_t second );
+
+/*!
+ *  \brief initializes the layout_order_t struct to PENCIL_LAYOUT_ORDER_TYPE_X_Y
+ *
+ *  \param this_ pointer to own object attributes
+ *  \param x_order first value of the pair
+ *  \param y_order second value of the pair
+ */
+static inline void layout_order_init_x_y ( layout_order_t *this_, int32_t x_order, int32_t y_order );
+
+/*!
+ *  \brief re-initializes the layout_order_t struct to PENCIL_LAYOUT_ORDER_TYPE_X_Y
+ *
+ *  \param this_ pointer to own object attributes
+ *  \param x_order first value of the pair
+ *  \param y_order second value of the pair
+ */
+static inline void layout_order_reinit_x_y ( layout_order_t *this_, int32_t x_order, int32_t y_order );
+
+/*!
+ *  \brief initializes the layout_order_t struct to PENCIL_LAYOUT_ORDER_TYPE_LIST
+ *
+ *  \param this_ pointer to own object attributes
+ *  \param list_order the list_order value
+ */
+static inline void layout_order_init_list ( layout_order_t *this_, int32_t list_order );
+
+/*!
+ *  \brief re-initializes the layout_order_t struct to PENCIL_LAYOUT_ORDER_TYPE_LIST
+ *
+ *  \param this_ pointer to own object attributes
+ *  \param list_order the list_order value
+ */
+static inline void layout_order_reinit_list ( layout_order_t *this_, int32_t list_order );
 
 /*!
  *  \brief copies original to this uninitialized layout_order_t struct
@@ -71,14 +105,14 @@ static inline void layout_order_copy ( layout_order_t *this_, const layout_order
 static inline void layout_order_replace ( layout_order_t *this_, const layout_order_t *original );
 
 /*!
- *  \brief initializes the layout_order_t struct to a pair of 0,0
+ *  \brief initializes the layout_order_t struct to a pair of 0,0, PENCIL_LAYOUT_ORDER_TYPE_NONE
  *
  *  \param this_ pointer to own object attributes
  */
 static inline void layout_order_init_empty ( layout_order_t *this_ );
 
 /*!
- *  \brief re-initializes the layout_order_t struct to a pair of 0,0
+ *  \brief re-initializes the layout_order_t struct to a pair of 0,0, PENCIL_LAYOUT_ORDER_TYPE_NONE
  *
  *  \param this_ pointer to own object attributes
  */
