@@ -1,5 +1,6 @@
 2018-0x-xx 1.5.0 [xxxxxxx]
   + ...
+  + Box and List diagrams hide all relationships
   . Database format changed (list_oder field for classifiers), up- and downwards compatible.
 2018-05-11 1.4.0 [66861a9]
   + relationships can connect to ports
